# cmake-example

./: README.md
debug/: cmake_debug
mylib/: foo.h
server_client_lib/: CMakeLists.txt
server_client_lib/client/: CMakeLists.txt
server_client_lib/mylib/: CMakeLists.txt  foo.cc
server_client_lib/release/: cmake_release
server_client_lib/server/: CMakeLists.txt
simple/: CMakeLists.txt  main.c
